# wifi

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.rst  README.rst  pyproject.toml  setup.py
docs/: conf.py
tests/: test_init.py  test_parsing.py  test_schemes.py  test_utils.py
wifi/: cli.py  scan.py  scheme.py  utils.py
