[tool.nitpick]
style = ["github://MrP01/lint-me-now/nitpick-base-style.toml", "github://MrP01/lint-me-now/nitpick-python-style.toml"]

[tool.poetry]
name = "wifi-ap-force"
version = "1.0.2"
description = "Command line tool and library wrappers around iwlist and /etc/network/interfaces."
authors = ["Rocky Meza, Gavin Wahl, EET"]
license = "BSD"
readme = "README.md"
packages = [{ include = "wifi_ap_force" }]

[tool.poetry.dependencies]
python = "^3.6"

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
profile = "black"

[tool.pylint]

[tool.pylint.REPORTS]
output-format = "colorized"

[tool.pylint.FORMAT]
max-line-length = 120
indent-after-paren = 4

[tool.bandit]
skips = ["B101"]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
